<resources>
    <string name="app_name">Logo+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_blurb">Open Source Impelemantion of Lighting Effects for Razer Phone 2</string>
    <string name="about_title">About</string>
    <string name="about_text">%s %s\n\n%s\n\nCopyright  © 2019\nCurtis Jones\n\nPackage: %s\nBuild: %s</string>
    <string name="ok_text">OK</string>
    <string name="service_status_text">Service Enabled</string>
    <string name="system_app_checkbox">Show System Apps</string>
    <string name="oss_text">Open Source</string>
    <string name="service_desc">Main service responsible for keeping a privileged shell open and controlling the logo lights</string>
    <string name="failed">Failed</string>
    <string name="failed_start">The service could not be started. Please ensure root access is available and that the request is accepted.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_effect">Remove Effect</string>
    <string name="notif_menu">Notifications</string>
    <string name="effects">Passive Effect</string>
    <string name="brightnessLbl">Brightness:</string>
    <string name="rainbow">Rainbow</string>
    <string name="pinwheel">Pinwheel</string>
    <string name="passiveEffectLbl">Passive Effect:</string>
    <string name="none_text">None</string>
    <string name="static_text">Static</string>
    <string name="pulsing">Pulse</string>
    <string name="effectColorLbl">Effect Color:</string>
    <string name="effectTimeLbl">Effect Length:</string>
    <string name="powerSave">Only while unlocked</string>
    <string name="apply">Apply</string>
    <string name="enabled">Enabled</string>
    <string name="addNumber">Add Number</string>
    <string name="ringMenu">Ring Effect</string>
    <string name="phonePermTitle">Permissions Required</string>
    <string name="phonePermDesc">To use the ringer animation effect, Logo+ needs the following permissions:\n\nRead phone status and identity:\nAllows the app to detect when the phone is ringing\n\nRead call log:\nAllows the app to determine which number called so we can apply a specific color per number\n\nIf you press OK, the above permissions will be requested. If you press Cancel or deny the permissions the functionality will not be enabled</string>
    <string name="pocketMode">Pocket Mode</string>
    <string name="powerSaveDesc">When this option is toggled on, the passive effect will only run while the phone is unlocked. Notification effects will still run while locked. This can potentially save battery life.</string>
    <string name="pocketModeDesc">When this option is toggled on, the passive effect will be turned off if, to a degree of certainty, it is determined that the device is currently in a pocket or bag.\nThe criteria by which this is determined:\n\t- If the proximity sensor is covered\n\t- If the ambient light is low\n\t- If the phone is tilted so that one of its edges is facing downwards(in case the phone is placed face down on a surface, such as a table)\nAdditionally, these conditions are only checked 5 seconds after the screen turns off\n\nOnce the lights are turned off, the phone must be unlocked before they will re-activate. Notification effects are disabled along with the passive effect. This can potentially save battery life.</string>
    <string name="title_activity_action">Logo+ Automation Action</string>
    <string name="autoInstPrompt">Please select a value to change...</string>
    <string name="instsLbl">Automation Instructions to Execute (Tasker variables supported in all fields):</string>
    <string name="passiveAutoHint">Enter effect no</string>
    <string name="remove">Remove</string>
    <string name="autoAllow">Allow Automation</string>
    <string name="passiveLenAutoHint">Effect length (ms)</string>
    <string name="passiveUnlockHint">Integer (0 is false)</string>
    <string name="autoBrightHint">Integer (0-255)</string>
    <string name="rolling">Rolling</string>
    <string name="batteryAnimationInfo">Battery Animation</string>
    <string name="batteryAnimationDesc">When this option is toggled on, the passive effect will be replaced by a charging animation when the device is plugged in. The animation will change color depending on the current battery level.</string>
    <string name="batteryOptiDesc">Please disable battery optimisations for Logo+ service</string>
    <string name="customRadio">Custom Effect</string>
    <string name="loadCustom">Load Custom</string>
    <string name="customErrTitle">Error loading effect</string>
    <string name="customErrMsg">There was an error trying to load the custom effect. The effect has not been loaded</string>
    <string name="customSuccTitle">Success</string>
    <string name="customSuccMsg">The custom effect program was validated successfully. Selecting the Custom Effect effect type will now play the loaded program. </string>
    <string name="visualizerOn">Visualizer</string>
    <string name="visPermDesc">To use the visualizer effect, Logo+ needs the following permissions:\n\nRecord audio:\nAllows the app to listen in on the global mixer and visualize the output.\n\nIf you press OK, the above permissions will be requested. If you press Cancel or deny the permissions the functionality will not be enabled</string>
    <string name="visAutomation">Set Visualizer State</string>
</resources>
