<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/screensGroup" >
        <item
            android:id="@+id/notifItem"
            android:title="@string/notif_menu" />
        <item
            android:id="@+id/effectsItem"
            android:title="@string/effects" />
        <item
            android:id="@+id/ringItem"
            android:title="@string/ringMenu" />
    </group>
    <item
        android:id="@+id/aboutItem"
        android:checkable="false"
        android:title="@string/about_title" />
    <item
        android:id="@+id/ossItem"
        android:checkable="false"
        android:title="@string/oss_text" />
    <item
        android:id="@+id/service_status_switch"
        android:title="@string/service_status_text"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/automation_switch"
        android:title="@string/autoAllow"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
</menu>
